# multi-application-model-serving-ray-serve

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.yaml  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
app/: text_embedding.py  text_reranker.py
notebooks/: test_qwen3_api.ipynb  test_qwen3_embeddings.ipynb  test_qwen3_reranker.ipynb
scripts/: entrypoint.sh
